--- a/katalog/templates/katalog.html
+++ b/katalog/templates/katalog.html
@@ -20,6 +20,16 @@
       <th>Item URL</th>
     </tr>
     {% comment %} Add the data below this line {% endcomment %}
+    {% for barang in list_barang %}
+        <tr>
+            <th>{{barang.item_name}}</th>
+            <th>{{barang.item_price}}</th>
+            <th>{{barang.item_stock}}</th>
+            <th>{{barang.rating}}</th>
+            <th>{{barang.description}}</th>
+            <th><a href= {{barang.item_url}}>{{barang.item_url}}</a></th>
+        </tr>
+{% endfor %}
   </table>
 
  {% endblock content %}
