--- a/mywatchlist/templates/mywatchlist.html
+++ b/mywatchlist/templates/mywatchlist.html
@@ -1,7 +1,13 @@
 {% extends 'base.html' %}
 
  {% block content %}
+  <h1>Tugas 3 Assignment PBP/PBD</h1>
 
+  <h5>Name: </h5>
+  <p>{{nama}}</p>
+
+  <h5>Student ID: </h5>
+  <p>{{NPM}}</p>
 
   <p>
     {% if distinction %}
