--- a/mywatchlist/templates/mywatchlist.html
+++ b/mywatchlist/templates/mywatchlist.html
@@ -10,7 +10,7 @@
   <p>{{NPM}}</p>
 
   <p>
-    {% if distinction %}
+    {% if watch_many %}
     Selamat, kamu sudah banyak menonton!
     {% else %}
     Wah, kamu masih sedikit menonton!
