--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -3,5 +3,5 @@
  {% block content %}
   <h1>Tugas 4 Assignment PBP/PBD</h1>
 
-
+  <button><a href="{% url 'todolist:logout' %}">Logout</a></button>
  {% endblock content %}
