--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -1,7 +1,43 @@
 {% extends 'base.html' %}
 
- {% block content %}
-  <h1>Tugas 4 Assignment PBP/PBD</h1>
 
-  <button><a href="{% url 'todolist:logout' %}">Logout</a></button>
- {% endblock content %}
+{% block meta %}
+<!--bikin judul-->
+<title>{{ user.username }}! | Todolist</title>
+{% endblock meta %}
+
+
+{% block content %}
+<h1>Tugas 4: To Do List</h1>
+
+<!--  banti dengan logout dengan bootstrap -->
+<div class="nav-right">
+    <strong>Halo, {{ user.username }}!</strong>
+    <a class="btn" href="{% url 'todolist:logout' %}">Logout</a>
+</div>
+
+<!--Tabel-->
+<table>
+    <tr>
+        <td class="table-header">User</td>
+        <td class="table-header">Title</td>
+        <td class="table-header">Description</td>
+        <td class="table-header">Date</td>
+
+    </tr>
+
+    {% for task in tasks %}
+    <tr>
+        <td>{{ task.user.username }}</td>
+        <td>{{ task.title }}</td>
+        <td class="description-col">{{ task.description }}</td>
+        <td>
+            {{ task.date | date:"N j, Y"}}<br>
+            {{ task.date | date:"H:i"}}
+        </td>
+    </tr>
+    {% endfor %}
+</table>
+
+
+{% endblock content %}
