added create_task, change date format, added bonus(change status button), added delete_task button

--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -23,7 +23,9 @@
         <td class="table-header">Title</td>
         <td class="table-header">Description</td>
         <td class="table-header">Date</td>
-
+        <td class="table-header">Status</td>
+        <td class="table-header">Ubah Status</td>
+        <td class="table-header">Hapus</td>
     </tr>
 
     {% for task in tasks %}
@@ -32,11 +34,41 @@
         <td>{{ task.title }}</td>
         <td class="description-col">{{ task.description }}</td>
         <td>
-            {{ task.date | date:"N j, Y"}}<br>
-            {{ task.date | date:"H:i"}}
+            {{task.date|date:"N j, Y, H:i" }}
+        </td>
+
+        <td>
+            {% if task.is_finished %}
+            <p class="tag completed">
+                Selesai
+            </p>
+            {% else %}
+            <p class="tag not-completed">
+                Belum Selesai
+            </p>
+            {% endif %}
+
+        </td>
+        <td>
+            <a class="btn toggle-btn" href="{% url 'todolist:toggle_task' task.id %}">
+                Ubah
+            </a>
+        </td>
+        <td>
+            <a class="btn delete-btn" href="{% url 'todolist:delete_task' task.id %}">
+                Hapus Task
+            </a>
         </td>
     </tr>
+
     {% endfor %}
+    <tr>
+        <td class="add-row" colspan="7">
+            <a class="btn add-btn" href="{% url 'todolist:create_task' %}">
+                Tambah Task
+            </a>
+        </td>
+    </tr>
 </table>
 
 
