--- a/todolist/templates/register.html
+++ b/todolist/templates/register.html
@@ -1,44 +1,33 @@
 {% extends 'base.html' %}
 
 {% block meta %}
-<title>Login</title>
+<title>Registrasi Akun</title>
 {% endblock meta %}
 
 {% block content %}
 
 <div class = "login">
 
-    <h1>Login</h1>
+    <h1>Formulir Registrasi</h1>
 
-    <form method="POST" action="">
-        {% csrf_token %}
-        <table>
-            <tr>
-                <td>Username: </td>
-                <td><input type="text" name="username" placeholder="Username" class="form-control"></td>
-            </tr>
-
-            <tr>
-                <td>Password: </td>
-                <td><input type="password" name="password" placeholder="Password" class="form-control"></td>
-            </tr>
-
-            <tr>
-                <td></td>
-                <td><input class="btn login_btn" type="submit" value="Login"></td>
-            </tr>
-        </table>
-    </form>
+        <form method="POST" >
+            {% csrf_token %}
+            <table>
+                {{ form.as_table }}
+                <tr>
+                    <td></td>
+                    <td><input type="submit" name="submit" value="Daftar"/></td>
+                </tr>
+            </table>
+        </form>
 
     {% if messages %}
         <ul>
             {% for message in messages %}
                 <li>{{ message }}</li>
-            {% endfor %}
+                {% endfor %}
         </ul>
     {% endif %}
-
-    Belum mempunyai akun? <a href="{% url 'todolist:register' %}">Buat Akun</a>
 
 </div>
 
