--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,8 @@
-table,td,th {
-    border: 1px solid black;
+/**
+ * Simple.css v2.1.1 (https://github.com/kevquirk/simple.css)
+ * MIT License, adjusted a bit
+ */
+
+table {
+    table-layout: auto
 }
