Tugas 5: Change Todolist(make it use card instead of table

--- a/templates/base_todolist.html
+++ b/templates/base_todolist.html
@@ -9,11 +9,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+    <nav class="navbar navbar-expand-lg bg-primary">
+        <div class="container-fluid">
+            <a class="navbar-brand text-white" href="#">To Do List</a>
+            {% block navbar %}
+            {% endblock navbar %}
+        </div>
+    </nav>
     {% block meta %}
     {% endblock meta %}
+
 </head>
 
 <body>
+
 {% block content %}
 {% endblock content %}
 </body>
