--- a/todolist/templates/login.html
+++ b/todolist/templates/login.html
@@ -2,29 +2,40 @@
 
 {% block meta %}
 <title>Login</title>
+{% load static %}
+<link rel="stylesheet" href="{% static 'todolist/login.css' %}"/>
 {% endblock meta %}
 
 {% block content %}
+
 <div class="login container-fluid text-center mt-5">
+    <div class="container p-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-xl-5">
+                <div class="card bg-white text-dark shadow-lg border-0" style="border-radius: 1rem;">
+                    <div class="card-body p-md-5 mx-md-4">
+                        <h1 class="title text-align-center">Login</h1>
+                        <form method="POST" action="" class="form-signin">
+                            {% csrf_token %}
+                            <input type="text" name="username" placeholder="Username" class="form-control">
+                            <input type="password" name="password" placeholder="Password" class="form-control">
 
-    <h1>Login</h1>
-    <form method="POST" action="" class="form-signin">
-        {% csrf_token %}
-        <input type="text" name="username" placeholder="Username" class="form-control">
-        <input type="password" name="password" placeholder="Password" class="form-control">
+                            <input class="btn btn-primary mt-3" type="submit" value="Login">
+                        </form>
 
-        <input class="btn btn-primary mt-3" type="submit" value="Login">
-    </form>
+                        {% if messages %}
+                            {% for message in messages %}
+                            <p class="text-danger p-1 mt-1 fw-normal">{{ message }}</p>
+                            {% endfor %}
+                        {% endif %}
 
-    {% if messages %}
-    <ul>
-        {% for message in messages %}
-        <li>{{ message }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
-
-    Belum mempunyai akun? <a href="{% url 'todolist:register' %}">Buat Akun</a>
+                        <p class="text-align-center mt-2">Belum ada akun?
+                            <a href="{% url 'todolist:register' %}" class="text-decoration-none fw-bold">Bikin baru</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </div>
 {% endblock content %}
