--- a/todolist/templates/register.html
+++ b/todolist/templates/register.html
@@ -2,33 +2,46 @@
 
 {% block meta %}
 <title>Registrasi Akun</title>
+{% load static %}
+<link rel="stylesheet" href="{% static 'todolist/login.css' %}"/>
 {% endblock meta %}
 
 {% block content %}
+<div class="login container-fluid text-center mt-5">
+    <div class="container p-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-xl-6">
+                <div class="card bg-white text-dark shadow-lg border-0" style="border-radius: 1rem;">
+                    <div class="card-body p-md-5 mx-md-4">
+                        <h1 class="title text-align-center">Register</h1>
+                        <form method="POST" class="form-register">
+                            {% csrf_token %}
+                            <input type="text" name="username" placeholder="Username" maxlength="150" autocapitalize="none" autocomplete="username" autofocus="" required="" id="id_username" class="form-control">
+                            <input type="password" name="password1" placeholder="Password" autocomplete="new-password" required="" id="id_password1" class="form-control">
+                            <div class="form-text help-text ">
+                                <ul>
+                                    <li>Your password can’t be too similar to your other personal information.</li>
+                                    <li>Your password must contain at least 8 characters.</li>
+                                    <li>Your password can’t be a commonly used password.</li>
+                                    <li>Your password can’t be entirely numeric.</li>
+                                </ul>
+                            </div>
+                            <input type="password" name="password2" placeholder="Confirm Password" autocomplete="new-password" required="" id="id_password2" class="form-control">
+                            <div class="form-text help-text">Enter the same password as before, for verification.</div>
 
-<div class = "login">
+                            <input type="submit" name="submit" value="Register" class="btn btn-primary mt-3"/>
+                        </form>
 
-    <h1>Formulir Registrasi</h1>
-
-        <form method="POST" >
-            {% csrf_token %}
-            <table>
-                {{ form.as_table }}
-                <tr>
-                    <td></td>
-                    <td><input type="submit" name="submit" value="Daftar"/></td>
-                </tr>
-            </table>
-        </form>
-
-    {% if messages %}
-        <ul>
-            {% for message in messages %}
-                <li>{{ message }}</li>
-                {% endfor %}
-        </ul>
-    {% endif %}
-
+                        {% if messages %}
+                            {% for message in messages %}
+                            <p class="text-danger p-1 mt-1 fw-normal">{{ message }}</p>
+                            {% endfor %}
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 {% endblock content %}
