Tugas 5: make card hover and make create_task.html responsive

--- a/todolist/templates/create_task.html
+++ b/todolist/templates/create_task.html
@@ -5,32 +5,35 @@
 <title>Create Task | To do list</title>
 {% endblock meta %}
 
+{% block navbar %}
+<a class="btn btn-danger m-2" href="{% url 'todolist:logout' %}" role="button">Logout</a>
+{% endblock navbar %}
 
 {% block content %}
 
-<nav>
-    <h1>To Do List</h1>
-    <div class="nav-right">
-        <strong>Halo, {{ user.username }}!</strong>
-        <a class="btn" href="{% url 'todolist:logout' %}">Logout</a>
-    </div>
-</nav>
-
 <section class="container">
-    <h1>Create New Task</h1>
 
-    <form method="POST">
-        {% csrf_token %}
-        {% for field in form %}
-        <div>
-            {{ field.errors }}
-            {{ field.label_tag }}<br>
-            {{ field }}
-        </div>
-        {% endfor %}
-        <input class="btn" type="submit" name="submit" value="Buat Task"/>
-    </form>
+    <div class="create-task container-fluid text-center mt-5">
+        <h1 class="h1">Create a New Task</h1>
+        <form method="POST" class="form-create-task">
+            {% csrf_token %}
+            <h5>Title:</h5>
+            <input type="text" name="title" placeholder="Title" maxlength="128" required="" id="id_title"
+                   class="form-control">
 
+            <h5>Description:</h5>
+            <textarea name="description" placeholder="Description" cols="40" rows="10" required="" id="id_description"
+                      class="form-control"></textarea>
+
+            <div class="row m-2">
+                <input class="col btn btn-primary m-3"  type="submit" name="submit" value="Create"/>
+                <a class="col btn btn-danger m-3" href="{% url 'todolist:show_todolist' %}" role="button">Back</a>
+            </div>
+
+
+        </form>
+
+    </div>
     {% if messages %}
     <ul>
         {% for message in messages %}
