Tugas 6: Get Ajax Bener

--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -5,69 +5,39 @@
 <title>{{ user.username }}! | Todolist</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
-    $(document).ready(function () {
-        $.getJSON("{% url 'todolist:show_todolist_json' %}", function (json) {
-            // JSON result in `data` variable
-            let cards = [];
-            $.each(json, function (index, val) {
-                let fields = val.fields;
-                let div1 = document.createElement("div");
-                div1.classList.add("card p-1 m-4 shadow-lg");
-
-                let card_body = document.createElement("div");
-                card_body.classList.add("card-body");
-
-                let card_title = document.createElement("h5");
-                card_title.classList.add("card-title");
-                card_title.innerHTML = fields.title
-
-                let card_progress = document.createElement("span");
-                card_progress.classList.add("badge rounded-pill bg-success align-top")
-                if (fields.is_finished) {
-                    card_progress.innerHTML = "Finished";
-                } else {
-                    card_progress.innerHTML = "Not Finished";
-                }
-
-                card_body.appendChild(card_title);
-                card_body.appendChild(card_progress);
-
-
-                let card_description = document.createElement("p");
-                card_description.classList.add("card-text");
-                card_description.innerHTML = fields.description;
-                card_body.appendChild(card_description)
-
-                let card_date = document.createElement("p");
-                card_date.classList.add("card-text");
-                let card_date_small = document.createElement("small")
-                card_date_small.classList.add("text-muted");
-                card_date_small.innerHTML = "Created on " + fields.description;
-                card_date.appendChild(card_date_small)
-                card_body.appendChild(card_date)
-
-
-
-                let button_group = document.createElement("div");
-                button_group.classList.add("row m-2");
-                let button_group_code = '<form method="post" action="todolist/toggle-task/' + fields.pk +
-                    '" <button class="col btn btn-info m-2" type="submit" name="toggle_button" id="toggle_button" ></button></form>'
-
-                button_group_code += '<form method="post" action="todolist/delete-task/' + fields.pk +
-                    '" <button class="btn btn-danger btn-sm" type="submit" name="delete" id="delete_button">' +
-                    'Delete</button></form>'
-
-                button_group.innerHTML = button_group_code;
-                card_body.appendChild(button_group)
-                div1.append(card_body);
-
-                cards.push(div1.outerHTML);
-            });
-
-            let card_container = document.getElementById("card-container");
-            card_container.innerHTML = cards.join("");
-        });
+    $(document).ready(function(){
+        show_tasks();
     });
+
+    function show_tasks() {
+        $.get("./json", data => {
+            data.forEach(element => {
+                let data = element.fields
+                console.log(element)
+                let card_div = $('<div></div>')
+                    .addClass('card p-1 m-4 shadow-lg')
+
+                let card_title = $('<div class="title-status"></div>')
+                    .append($('<p class="card-title"></p>')
+                        .append(data.title))
+                        .append($('<span></span>')
+                            .addClass('badge rounded-pill align-top')
+                            .addClass(data.is_finished ? 'bg-success' : 'bg-danger')
+                            .text(data.is_finished ? 'Finished' : 'Not Finished'))
+
+                let card_body = $('<div class="card-body"></div>')
+                    .append(card_title)
+                    .append($('<p class="card-text">' + data.description + '</p>'))
+                    .append($('<p><small class="card-subtitle mb-2 text-muted">Created on: ' + data.date + '</small></p>'));
+
+                let card_button = $('<div class="row m-2">')
+                    .append($(`<a class="col btn btn-info m-2" href="/todolist/toggle-task/${element.pk}" >Change status</a>`))
+                    .append($(`<a class="col btn btn-danger m-2" href="/todolist/delete-task/${element.pk}" >Delete task</a>`));
+
+                $("#card-list").append(card_div.append(card_body).append(card_button));
+            });
+        });
+    }
 </script>
 {% endblock meta %}
 
@@ -80,32 +50,32 @@
 {% block content %}
 <h1 class="h1 p-2 m-2 fw-bold">Halo, {{user.username}}</h1>
 <a class="btn btn-success m-2" href="{% url 'todolist:create_task' %}">Tambah Task</a>
-<table id="card-container">
-    {% for task in tasks %}
+<div id="card-list">
+
     {% comment %}
-<!--    <div class="card p-1 m-4 shadow-lg">-->
-<!--        <div class="card-body">-->
-<!--            <div class="title-status">-->
-<!--                <p class="card-title">{{task.title}}</p>-->
-<!--                {% if task.is_finished %}-->
-<!--                <span class="badge rounded-pill bg-success align-top">Finished</span>-->
-<!--                {% else %}-->
-<!--                <span class="badge rounded-pill bg-danger align-top">Not Finished</span>-->
-<!--                {% endif %}-->
-<!--            </div>-->
-<!--            <p class="card-text">{{task.description}}</p>-->
-<!--            <p class="card-text"><small class="text-muted">Created on {{task.date}}</small></p>-->
-<!--        </div>-->
-<!--        <div class="row m-2">-->
-<!--            <a class="col btn btn-info m-2" href="{% url 'todolist:toggle_task' task.id %}" role="button">Change-->
-<!--                Status</a>-->
-<!--            <a class="col btn btn-danger m-2" href="{% url 'todolist:delete_task' task.id %}" role="button">Delete-->
-<!--                Task</a>-->
-<!--        </div>-->
-<!--    </div>-->
+        <div class="card p-1 m-4 shadow-lg">
+            <div class="card-body">
+                <div class="title-status">
+                    <p class="card-title">{{task.title}}</p>
+                    {% if task.is_finished %}
+                    <span class="badge rounded-pill bg-success align-top">Finished</span>
+                    {% else %}
+                    <span class="badge rounded-pill bg-danger align-top">Not Finished</span>
+                    {% endif %}
+                </div>
+                <p class="card-text">{{task.description}}</p>
+                <p class="card-text"><small class="text-muted">Created on {{task.date}}</small></p>
+            </div>
+            <div class="row m-2">
+                <a class="col btn btn-info m-2" href="{% url 'todolist:toggle_task' task.id %}" role="button">Change
+                    Status</a>
+                <a class="col btn btn-danger m-2" href="{% url 'todolist:delete_task' task.id %}" role="button">Delete
+                    Task</a>
+            </div>
+        </div>
     {% endcomment %}
-    {% endfor %}
-</table>
+
+</div>
 
 
 {% endblock content %}
