--- a/todolist/templates/todolist_backup.html
+++ b/todolist/templates/todolist_backup.html
@@ -12,70 +12,57 @@
             $.each(json, function (index, val) {
                 let fields = val.fields;
                 let div1 = document.createElement("div");
-                div1.classList.add("card");
-                div1.classList.add("mb-5");
-                div1.classList.add("col-lg-5");
-                let card_header = document.createElement("div");
-                card_header.classList.add("card-header")
-                if (fields.is_finished) {
-                    card_header.innerHTML = "Done";
-                } else {
-                    card_header.innerHTML = "In Progress";
-                }
-                div1.appendChild(card_header);
+                div1.classList.add("card p-1 m-4 shadow-lg");
 
                 let card_body = document.createElement("div");
                 card_body.classList.add("card-body");
+
                 let card_title = document.createElement("h5");
                 card_title.classList.add("card-title");
                 card_title.innerHTML = fields.title
+
+                let card_progress = document.createElement("span");
+                card_progress.classList.add("badge rounded-pill bg-success align-top")
+                if (fields.is_finished) {
+                    card_progress.innerHTML = "Finished";
+                } else {
+                    card_progress.innerHTML = "Not Finished";
+                }
+
                 card_body.appendChild(card_title);
+                card_body.appendChild(card_progress);
+
 
                 let card_description = document.createElement("p");
                 card_description.classList.add("card-text");
                 card_description.innerHTML = fields.description;
                 card_body.appendChild(card_description)
 
-                let button_group = document.createElement("div");
-                button_group.classList.add("btn-group");
-                button_group.classList.add("float-end");
-                let buttons_code_block = '<form method="post" action="todolist/toggle-task/"' + fields.pk +
-                    '<button class="btn btn-secondary btn-sm me-3" type="submit" name="toggle_done" id="toggle_button" >'
-                // ' {% if task.is_finished %} Mark Not Done {% else %} Mark Done {% endif %}' +
-                if (fields.is_finished) {
-                    buttons_code_block += "Mark Not Done";
-                } else {
-                    buttons_code_block += "Mark Done";
-                }
-                buttons_code_block += '</button>' +
-                    '</form>' +
-                    '<form method="post" action="todolist/toggle-task/"' + fields.pk +
-                    '<button class="btn btn-danger btn-sm" type="submit" name="delete">' +
-                    'Delete' +
-                    '</button>' +
-                    '</form>'
+                let card_date = document.createElement("p");
+                card_date.classList.add("card-text");
+                let card_date_small = document.createElement("small")
+                card_date_small.classList.add("text-muted");
+                card_date_small.innerHTML = "Created on " + fields.description;
+                card_date.appendChild(card_date_small)
+                card_body.appendChild(card_date)
 
-                button_group.innerHTML = buttons_code_block;
+                let button_group = document.createElement("div");
+                button_group.classList.add("row m-2");
+                let button_group_code = '<form method="post" action="todolist/toggle-task/' + fields.pk +
+                    '" <button class="col btn btn-info m-2" type="submit" name="toggle_button" id="toggle_button" ></button></form>'
+
+                button_group_code += '<form method="post" action="todolist/delete-task/' + fields.pk +
+                    '" <button class="btn btn-danger btn-sm" type="submit" name="delete" id="delete_button">' +
+                    'Delete</button></form>'
+
+                button_group.innerHTML = button_group_code;
                 card_body.appendChild(button_group)
                 div1.append(card_body);
-
-                let toggle_button = button_group.firstChild.firstChild;
-                if (fields.is_finished) {
-                    toggle_button.innerHTML = "Mark Not Done";
-                } else {
-                    toggle_button.innerHTML = "Mark Done";
-                }
-
-                let card_footer = document.createElement("div");
-                card_footer.classList.add("card-footer");
-                card_footer.classList.add("text-muted");
-                card_footer.innerHTML = fields.date;
-                div1.append(card_footer);
 
                 cards.push(div1.outerHTML);
             });
 
-            var card_container = document.getElementById("card-container");
+            let card_container = document.getElementById("card-container");
             card_container.innerHTML = cards.join("");
         });
     });
